unit tests: use nanohttpd instead of mockserver